# lolcommits-rs

./: CHANGELOG.md  Cargo.toml  FIXUP.md  README.md  build.rs  cog.toml  commit-msg.txt  flake.nix  tmpfiles.d.md
.claude/: settings.local.json
assets/: config.toml.sample  lolcommitsd.service  user-tmpfiles.d.sample
docs/: automatic-cleanup.md
docs/plans/: 2026-03-05-prometheus-metrics.md
docs/superpowers/plans/: 2026-03-11-lolcommits-fixup.md  2026-03-12-commit-fingerprinting.md
docs/superpowers/specs/: 2026-03-11-commit-fingerprinting-design.md  2026-03-11-lolcommits-fixup-design.md
packaging/arch/: .gitignore  PKGBUILD  build_chroot.sh  lolcommits-server.install
src/: camera.rs  capture.rs  config.rs  error.rs  git.rs  image_metadata.rs  image_processor.rs  lib.rs  main.rs  metrics.rs  segmentation.rs  server.rs
src/static/: index.html
