[package]
name = "sw1nn-lolcommits-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
nokhwa = { version = "0.10", features = ["input-native"] }
image = "0.25"
imageproc = "0.25"
ab_glyph = "0.2"
git2 = "0.19"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
derive_more = { version = "1.0", features = ["display", "from", "error"] }
directories = "5.0"
chrono = "0.4"
opencv = { version = "0.97", default-features = false, features = [
  "imgproc",
  "clang-runtime",
  "dnn",
] }
reqwest = { version = "0.12", features = ["blocking"] }
md5 = "0.7"
sha2 = "0.10"
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
xdg = "2.5"
fontconfig = "0.8"
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["fs", "trace"] }
serde_json = "1.0"
png = "0.18"
tempfile = "3.23.0"
